# anxiety-regression-analysis

./: EDA_utils.py  ML_EDA_Linear_regression.ipynb  README.md  app.py  modelo_ansiedad.pkl  pyproject.toml  test.py
outputs/models/: ols_anxiety_model.pkl
