[project]
name = "ml-assignment-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Garaycochea Lozada"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=1.21.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "plotly (>=6.1.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
